// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services data All service summary for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "service_summary": null,
      },
    },
  },
}
`;

exports[`services data All service summary for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": Object {
        "service_summary": null,
      },
    },
  },
}
`;

exports[`services data All services and standards for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "services": null,
      },
    },
  },
}
`;

exports[`services data All services and standards for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": Object {
        "services": null,
      },
    },
  },
}
`;

exports[`services data Searching services by name 1`] = `
Object {
  "data": Object {
    "root": Object {
      "diacritical_search": Array [
        Object {
          "id": "172",
          "name": "Demandes de renseignements d'entités déclarantes",
        },
        Object {
          "id": "204",
          "name": "Entreprises de services monétaires – Recherche d’entités inscrites",
        },
      ],
      "multi_word_search": Array [],
      "partial_word_search": Array [
        Object {
          "id": "172",
          "name": "Demandes de renseignements d'entités déclarantes",
        },
        Object {
          "id": "204",
          "name": "Entreprises de services monétaires – Recherche d’entités inscrites",
        },
        Object {
          "id": "195",
          "name": "Registre des entreprises de services monétaires (ESM) – Inscription te maintenance",
        },
        Object {
          "id": "978",
          "name": "Demandes de renseignements du public et des médias",
        },
        Object {
          "id": "171",
          "name": "Communications de renseignements financiers",
        },
      ],
    },
  },
}
`;

exports[`services data Single service 1`] = `
Object {
  "data": Object {
    "root": Object {
      "service": null,
    },
  },
}
`;
